[gd_scene load_steps=15 format=3 uid="uid://de7lufg3nef63"]

[ext_resource type="PackedScene" uid="uid://ixijbmta3kxr" path="res://Instances/Player.tscn" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://bt3pir55cg21r" path="res://Scripts/World.gd" id="1_tlwt5"]
[ext_resource type="PackedScene" uid="uid://b6om12gpghe1t" path="res://Instances/standing_button.tscn" id="3_aqk2v"]
[ext_resource type="PackedScene" uid="uid://3oetpb0fhym5" path="res://Instances/floor_button.tscn" id="4_036b0"]
[ext_resource type="Script" uid="uid://c0qo17h507e4a" path="res://Scripts/door.gd" id="4_dwbse"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fj7yv"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_tlwt5"]
sky_material = SubResource("ProceduralSkyMaterial_fj7yv")

[sub_resource type="Environment" id="Environment_aqk2v"]
background_mode = 2
sky = SubResource("Sky_tlwt5")
tonemap_mode = 2

[sub_resource type="BoxMesh" id="BoxMesh_f3sb7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dwbse"]
albedo_color = Color(0.254902, 0.34902, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_fj7yv"]

[sub_resource type="BoxMesh" id="BoxMesh_pkg7o"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pkg7o"]
albedo_color = Color(0.329412, 1, 0.337255, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_gbfbk"]
size = Vector3(0.126953, 1, 1)

[node name="World" type="Node3D"]
script = ExtResource("1_tlwt5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_aqk2v")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4995, 0)
use_collision = true
size = Vector3(18, 0.001, 18)

[node name="Player" parent="." instance=ExtResource("1_f3sb7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.15775, 0, 0)

[node name="Box" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.00829)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Box"]
transform = Transform3D(0.999999, -0.00132645, 0, 0.00132645, 0.999999, 0, 0, 0, 1, 0, 0.125632, 0)
mesh = SubResource("BoxMesh_f3sb7")
surface_material_override/0 = SubResource("StandardMaterial3D_dwbse")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Box"]
shape = SubResource("BoxShape3D_fj7yv")

[node name="Standing Button" parent="." instance=ExtResource("3_aqk2v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0418671, -0.280439, 0)

[node name="Door" type="StaticBody3D" parent="."]
transform = Transform3D(1.745, 0, 0, 0, 1.745, 0, 0, 0, 1.745, 4.76374, 0.422639, -0.470842)
script = ExtResource("4_dwbse")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Door"]
transform = Transform3D(0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_pkg7o")
surface_material_override/0 = SubResource("StandardMaterial3D_pkg7o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_gbfbk")

[node name="Floor Button" parent="." instance=ExtResource("4_036b0")]
transform = Transform3D(1.745, 0, 0, 0, 1.745, 0, 0, 0, 1.745, -1.75002, -0.439035, -5.63994)

[connection signal="touched" from="Standing Button" to="." method="_on_standing_button_touched"]
[connection signal="pressed" from="Floor Button" to="." method="_on_floor_button_pressed"]
[connection signal="release" from="Floor Button" to="." method="_on_floor_button_release"]
