extends Node3D

@onready var door1 = $Door

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_standing_button_touched() -> void:
	pass


func _on_floor_button_pressed() -> void:
	pass # Replace with function body.


func _on_floor_button_release() -> void:
	pass # Replace with function body.
